# llm-zoomcamp-hw

./: .gitignore  pyproject.toml
l1-rag/: dataset_analysis.ipynb  faq.db  rag.ipynb  rag_helper.py  rag_helper_test.ipynb  sqlite-ingest.ipynb  sqlite-query.ipynb  test.ipynb  toyaikit_test.ipynb
l1-rag/homework/: hw.ipynb  hw_rag_helper.py
l2-vector-search/: pgvector.ipynb  rag_helper.py  vector_search.ipynb  vector_search_rag.ipynb  vector_search_reopen_index.ipynb
l2-vector-search/homework/: hw.ipynb  pyproject.toml
l2-vector-search/llm-zoomcamp-onnx/: onnx_pipeline.ipynb  pyproject.toml
